--- a/stable-coin-paper/sections/abstract.tex
+++ b/stable-coin-paper/sections/abstract.tex
@@ -1,3 +1,5 @@
 % !TEX root = ../main.tex
 
 \textblue{TBD} Bitcoin is volatile. People do not like this feature Bitcoin. People therefore try to tweak Bitcoin to make a less volatile version. Or they try to bring less volatile currencies onto Bitcoin or other blockchain systems. This paper is essentially a survey of work on stablecoins but we aim at making a number of subtle research contributions to ensure this survey is actually useful to the reader. First and foremost, we are very selective in the concepts from finance we bring into the survey and explain each from first principles, while attempting to minimize or eliminate jargon. We distill proposals done to their fundamental primitives and describe these concepts rather than enumerating the intricate details of how particular `brands' of stablecoins work?details that could change tomorrow (that said, we do provide, as the reader probably expects, a chart mapping brands into our categorization). Additionally, we also consider the question and potential for the stability of index-cryptocurrencies (namely gas which is used in Ethereum), which are very pertinent to a discussion of stablecoins, yet not typically addressed. Last, we offer some novel visualizations of exchange rates we have not seen before.
+
+%In Table~\ref{tab:stablecoins}, we show the taxonomy we use to classify stablecoins. As mentioned earlier in Section~\ref{sec:lit}, taxonomies for stablecoins have been proposed many times. The focus of our taxonomy is a bit different; we do not care about classification \textit{per se}, we view our work as a tutorial on how to build a stablecoin and the taxonomy are simply a set of directions a designer can choose between or combine.
