--- a/stable-coin-paper/setup/table.tex
+++ b/stable-coin-paper/setup/table.tex
@@ -58,6 +58,6 @@
 						& \multirow{1}{*}{Only internal information} 			& Basecoin & $\perp$ \\ \hline
 
 \end{tabular}
-\caption{Systemization of current stablecoin projects as of January 11, 2019. \textit{Disclaimer:} $\dagger$ Projects are classified according to what they assert; \eg we provide no warranty that projects classified as `redeemable' provide actual redemption of the assets that back their coins. Rank corrosponds to \textit{CoinMarketCap}. The projects bold are discussed in this paper.\label{tab:stablecoins}}
+\caption{Stablecoin proposals as of January 11, 2019. $\dagger$ \textit{Disclaimer:} Projects are classified according to what they assert; \eg we provide no warranty that projects classified as `redeemable' provide actual redemption of the assets that back their coins. Rank corrosponds to \textit{CoinMarketCap}. The projects bold are discussed in this paper.\label{tab:stablecoins}}
 \end{table}
 % ------------------------------------------------------------------------------------------------------------------------------------------------%
